Implemented Discord endpoints
